visual glitch fixed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" href="https://cdn-icons.flaticon.com/png/512/868/premium/868927.png?token=exp=1645640795~hmac=db0109a2a369533b6866740e235b56cb">
+    <link rel="icon"
+        href="https://cdn-icons.flaticon.com/png/512/868/premium/868927.png?token=exp=1645640795~hmac=db0109a2a369533b6866740e235b56cb">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <title>How the Internet works</title>
@@ -96,28 +97,25 @@
         </div>
     </div>
 
-    <div class="wave-container">
-        <img src="./assets/imgs/waves/wave-2.png" class="wave" style="bottom: 0; top: 0;" alt="">
-        <div id="bandwidth" class="full-container">
-            <img src="./assets/imgs/bandwith.png" id="bandwidth_text" class="reveal" alt="">
-            <div class="content">
-                <h2 style="text-align: center; color: #333 !important;">But how can you track your Internet speed?</h2>
-                <p style="margin-top: 3rem; width: 500px;">Internet bandwith is an indicator of the speed of the
-                    connection,
-                    the amount of data that can be sent per second.
-                    <br>Faster connections have become possibile withg better physical infracstructure as well as better
-                    ways to encode the information
-                </p>
-                <button class="cta" style="margin-top: 4rem;">
-                    <span><a target="blank" href="https://www.calculator.net/bandwidth-calculator.html">Calculate your
-                            bandwidth</a></span>
-                    <svg width="15px" height="10px" viewBox="0 0 13 10">
-                        <path d="M1,5 L11,5"></path>
-                        <polyline points="8 1 12 5 8 9"></polyline>
-                    </svg>
-                </button>
-                <img src="./assets/imgs/chart_guy.png" id="chart_guy" alt="">
-            </div>
+    <img src="./assets/imgs/waves/wave-2.png" class="wave" style="bottom: 0; top: 0;" alt="">
+    <div id="bandwidth" class="full-container">
+        <img src="./assets/imgs/bandwith.png" id="bandwidth_text" class="reveal" alt="">
+        <div class="content">
+            <h2 style="text-align: center; color: #333 !important;">But how can you track your Internet speed?</h2>
+            <p style="margin-top: 3rem; width: 500px;">Internet bandwith is an indicator of the speed of the
+                connection,
+                the amount of data that can be sent per second.
+                <br>Faster connections have become possibile withg better physical infracstructure as well as better
+                ways to encode the information
+            </p>
+            <button class="cta" style="margin-top: 4rem;">
+                <span><a target="blank" href="https://www.calculator.net/bandwidth-calculator.html">Calculate your
+                        bandwidth</a></span>
+                <svg width="15px" height="10px" viewBox="0 0 13 10">
+                    <path d="M1,5 L11,5"></path>
+                    <polyline points="8 1 12 5 8 9"></polyline>
+                </svg>
+            </button>
         </div>
     </div>
 
