--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 
     <img src="./assets/imgs/waves/wave-2.png" class="wave" style="bottom: 0; top: 0;" alt="">
     <div id="bandwidth" class="full-container">
-        <img src="./assets/imgs/bandwith.png" id="bandwidth_text" class="reveal" alt="">
-        <div class="content">
+        <img src="./assets/imgs/bandwith.png" style="padding: 2rem;" id="bandwidth_text" class="reveal" alt="">
+        <div class="content" ">
             <h2 style="text-align: center; color: #333 !important;">But how can you track your Internet speed?</h2>
             <p style="margin-top: 3rem; width: 500px;">Internet bandwith is an indicator of the speed of the
                 connection,
