--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
     <div class="container">
         <h1>HOW THE <span>INTERNET</span> WORKS</h1>
         <div class="flex front-page">
-            <button style="margin-top: 4rem;" id="scroll_button">
+            <button id="" class="cta" style="margin-top: 4rem;">
                 <span>LET'S FIND OUT</span>
-                <div class="liquid"></div>
+                <svg width="15px" height="10px" viewBox="0 0 13 10">
+                    <path d="M1,5 L11,5"></path>
+                    <polyline points="8 1 12 5 8 9"></polyline>
+                </svg>
             </button>
             <img src="./assets/imgs/world-connected.png" id="world-connected" style="padding: 3rem;"
                 alt="world connected png">
