updated scroll cta

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
         <h1>HOW THE <span>INTERNET</span> WORKS</h1>
         <div class="flex front-page">
-            <button id="" class="cta" style="margin-top: 4rem;">
+            <button id="scroll_button" class="cta" style="margin-top: 4rem;">
                 <span>LET'S FIND OUT</span>
                 <svg width="15px" height="10px" viewBox="0 0 13 10">
                     <path d="M1,5 L11,5"></path>
